# Face-Swap-Studio

./: .env.example  .gitignore  README.md  README_RU.md  app.py  comands.txt  commands.txt  external-models-manifest.txt  project-structure.txt  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
config/: settings.yaml
diagnostics/: all-cli-arguments.txt  external-imports.txt  ghost-expected-models.txt  ghost-report.txt  ghost2-expected-models.txt  ghost2-missing-assets.txt  ghost2-report.txt  simswap-expected-models.txt  simswap-import-test.txt  simswap-report.txt
scripts/: build_macos_app.sh  check_environment.py  check_external_models.py  download_models.py  macos_app_launcher.py  run.sh  smoke_test_ghost.py  smoke_test_ghost2.py  smoke_test_modern_swappers.py  smoke_test_simswap.py  start.sh  stop.sh  verify_external_assets.py
src/face_swap_studio/adapters/: __init__.py  base.py  ghost.py  ghost2.py  inswapper.py  modern_onnx.py  process_runner.py  registry.py  simswap.py
src/face_swap_studio/core/: detector.py  enhancer.py  masker.py  pipeline.py  swapper.py  upscaler.py
src/face_swap_studio/domain/: entities.py
src/face_swap_studio/models/: manifest.py  model_manager.py
src/face_swap_studio/services/: batch_service.py  image_service.py
src/face_swap_studio/ui/: __init__.py  api_models.py  app.py  components.py  server.py  session.py  state.py
src/face_swap_studio/ui/archive/: gradio_app.py  gradio_components.py  (+1 more)
src/face_swap_studio/utils/: logging.py  paths.py
tests/: test_adapters.py  test_detector.py  test_pipeline.py
(+3 files in other folders)
