[build-system]
requires = ["setuptools>=81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-swap-studio"
version = "0.1.0"
description = "Local multi-face swapping application for macOS"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Andrey Zakharov" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:Please import `convolve` from the `scipy.ndimage` namespace:DeprecationWarning:basicsr.metrics.niqe",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "data",
    "models",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
exclude = ["\\.venv", "data", "models"]